--- a/app/src/main/res/layout/dialog_age_verify.xml
+++ b/app/src/main/res/layout/dialog_age_verify.xml
@@ -32,6 +32,8 @@
               android:layout_height="wrap_content"
               android:layout_marginHorizontal="@dimen/margin_30"
               android:layout_marginTop="@dimen/margin_8"
+              android:lineSpacingExtra="3dp"
+              android:gravity="center"
               android:text="@string/A002"
               android:textColor="@color/color_6D7693"
               android:textSize="@dimen/textSize14sp"/>
