首页体育卡片样式调整

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -257,6 +257,7 @@
     <color name="transparent_white_60">#99FFFFFF</color>
     <color name="transparent_white_70">#B3FFFFFF</color>
     <color name="transparent_white_50">#7fFFFFFF</color>
+    <color name="transparent_white_80">#CCFFFFFF</color>
     <color name="transparent_white_90">#e5FFFFFF</color>
 
     <!--    <color name="color_fff3f3f3">#fff3f3f3</color>-->
