--- a/app/src/main/res/layout/item_home_hot_esport.xml
+++ b/app/src/main/res/layout/item_home_hot_esport.xml
@@ -1,203 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="320dp"
-    android:layout_height="wrap_content"
+    android:layout_height="192dp"
     android:orientation="vertical"
     android:layout_marginRight="8dp"
-    android:background="@drawable/bg_item_home_hot_match"
-    tools:ignore="MissingDefaultResource">
-    <ImageView
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:src="@drawable/bg_trans_home_hot_esport"/>
+    android:background="@drawable/bg_trans_home_hot_esport">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:gravity="center_vertical"
-        android:layout_marginHorizontal="@dimen/margin_12"
-        android:layout_marginVertical="@dimen/margin_10">
+        android:layout_marginHorizontal="12dp">
+
         <ImageView
             android:id="@+id/iv_league_logo"
-            android:layout_width="@dimen/margin_16"
-            android:layout_height="@dimen/margin_16"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:src="@drawable/ic_team_default" />
 
         <TextView
             android:id="@+id/tvLeagueName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin_8"
+            android:layout_marginLeft="8dp"
             android:ellipsize="end"
             android:maxLines="1"
             tools:text="Siêu giải Trung Quốc"
-            android:textColor="@color/color_6D7693"
-            android:textSize="@dimen/textSize14sp" />
+            android:textColor="@color/white"
+            android:textSize="14sp" />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_marginTop="14dp"
+        android:paddingHorizontal="20dp">
+
+        <ImageView
+            android:id="@+id/ivHomeIcon"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:padding="10dp"
+            android:background="@drawable/bg_home_team_logo"
+            android:layout_marginRight="30dp"
+            tools:src="@drawable/ic_team_default" />
+
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_marginTop="@dimen/margin_4">
-            <ImageView
-                android:id="@+id/ivHomeIcon"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:padding="@dimen/margin_10"
-                android:background="@drawable/bg_home_team_logo"
-                android:layout_marginLeft="38dp"
-                android:layout_marginRight="@dimen/margin_30"
-                android:src="@drawable/ic_team_default" />
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:orientation="vertical">
+
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="match_parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center">
+
+                <TextView
+                    android:id="@+id/tv_home_score"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center">
+                    android:layout_weight="1"
+                    android:fontFamily="@font/inter_bold"
+                    android:gravity="right"
+                    android:textColor="@color/color_313F56"
+                    android:textSize="18sp"
+                    tools:text="1" />
 
-                    <TextView
-                        android:id="@+id/tv_home_score"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/inter_bold"
-                        android:gravity="right"
-                        android:textColor="@color/color_313F56"
-                        android:textSize="@dimen/textSize18sp"
-                        tools:text="1" />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:ellipsize="end"
-                        android:maxLines="1"
-                        android:layout_marginHorizontal="@dimen/margin_12"
-                        android:text="VS"
-                        android:textColor="@color/color_6D7693"
-                        android:textSize="@dimen/textSize14sp" />
-                    <TextView
-                        android:id="@+id/tv_away_score"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:fontFamily="@font/inter_bold"
-                        android:textColor="@color/color_313F56"
-                        android:textSize="@dimen/textSize18sp"
-                        tools:text="1"/>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
+                <TextView
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center">
+                    android:layout_gravity="center_vertical"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:layout_marginHorizontal="@dimen/margin_12"
+                    android:text="VS"
+                    android:textColor="@color/color_6D7693"
+                    android:textSize="14sp" />
 
-                    <TextView
-                        android:id="@+id/tvGameStatus"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:lines="1"
-                        android:text="---"
-                        android:textColor="@color/color_6D7693"
-                        android:textSize="@dimen/textSize12sp" />
-                    <TextView
-                        android:id="@+id/tvGamePlayTime"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:lines="1"
-                        android:text="---"
-                        android:textColor="@color/color_025BE8"
-                        android:textSize="@dimen/textSize12sp"/>
-
-                </LinearLayout>
+                <TextView
+                    android:id="@+id/tv_away_score"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:fontFamily="@font/inter_bold"
+                    android:textColor="@color/color_313F56"
+                    android:textSize="18sp"
+                    tools:text="1"/>
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/ivAwayIcon"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:padding="@dimen/margin_10"
-                android:background="@drawable/bg_home_team_logo"
-                android:layout_marginLeft="@dimen/margin_30"
-                android:layout_marginRight="38dp"
-                android:src="@drawable/ic_team_default" />
-
-
-        </LinearLayout>
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="@dimen/margin_12"
-            android:layout_marginTop="@dimen/margin_10">
-
-
-            <TextView
-                android:id="@+id/tv_home_name"
-                android:layout_width="112dp"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:gravity="center"
-                android:ellipsize="end"
-                android:lines="1"
-                android:textColor="@color/color_313F56"
-                android:textStyle="bold"
-                android:textSize="@dimen/textSize14sp"
-                tools:text="Chelsea"/>
+                android:gravity="center">
 
-            <androidx.legacy.widget.Space
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/tvGameStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:lines="1"
+                    android:text="---"
+                    android:textColor="@color/color_6D7693"
+                    android:textSize="@dimen/textSize12sp" />
 
-            <TextView
-                android:id="@+id/tv_away_name"
-                android:layout_width="112dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:ellipsize="end"
-                android:lines="1"
-                android:textColor="@color/color_313F56"
-                android:textStyle="bold"
-                android:textSize="@dimen/textSize14sp"
-                tools:text="Chelsea"/>
+                <TextView
+                    android:id="@+id/tvGamePlayTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:lines="1"
+                    android:text="---"
+                    android:textColor="@color/color_025BE8"
+                    android:textSize="@dimen/textSize12sp"/>
+
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginVertical="@dimen/margin_10"
-            android:layout_marginHorizontal="@dimen/margin_12">
+        <ImageView
+            android:id="@+id/ivAwayIcon"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:padding="@dimen/margin_10"
+            android:background="@drawable/bg_home_team_logo"
+            android:layout_marginLeft="30dp"
+            tools:src="@drawable/ic_team_default" />
 
-            <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
-                android:id="@+id/oddBtn1"
-                android:layout_width="0dp"
-                android:layout_height="36dp"
-                android:layout_weight="1" />
-
-            <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
-                android:id="@+id/oddBtn2"
-                android:layout_width="0dp"
-                android:layout_marginLeft="4dp"
-                android:layout_height="36dp"
-                android:layout_weight="1" />
-
-            <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
-                android:id="@+id/oddBtn3"
-                android:layout_width="0dp"
-                android:layout_height="36dp"
-                android:layout_marginLeft="4dp"
-                android:layout_weight="1" />
-        </LinearLayout>
     </LinearLayout>
-</FrameLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="4dp">
+
+        <TextView
+            android:id="@+id/tv_home_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginRight="5dp"
+            android:gravity="left"
+            android:ellipsize="end"
+            android:lines="1"
+            android:textColor="@color/color_313F56"
+            android:textStyle="bold"
+            android:textSize="@dimen/textSize14sp"
+            tools:text="Chelsea"/>
+
+        <TextView
+            android:id="@+id/tv_away_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="5dp"
+            android:gravity="right"
+            android:ellipsize="end"
+            android:lines="1"
+            android:textColor="@color/color_313F56"
+            android:textStyle="bold"
+            android:textSize="@dimen/textSize14sp"
+            tools:text="Chelsea"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginVertical="@dimen/margin_10"
+        android:layout_marginHorizontal="@dimen/margin_12">
+
+        <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
+            android:id="@+id/oddBtn1"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_weight="1" />
+
+        <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
+            android:id="@+id/oddBtn2"
+            android:layout_width="0dp"
+            android:layout_marginLeft="4dp"
+            android:layout_height="36dp"
+            android:layout_weight="1" />
+
+        <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
+            android:id="@+id/oddBtn3"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_marginLeft="4dp"
+            android:layout_weight="1" />
+    </LinearLayout>
+</LinearLayout>
