--- a/app/src/main/res/layout/item_home_hot_match.xml
+++ b/app/src/main/res/layout/item_home_hot_match.xml
@@ -1,204 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="340dp"
-    android:layout_height="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="340dp"
+    android:layout_height="182dp"
     android:orientation="vertical"
     android:layout_marginRight="8dp"
-    android:background="@drawable/bg_item_home_hot_match">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:src="@drawable/bg_trans_home_hot_match"/>
+    android:background="@drawable/bg_trans_home_hot_match" >
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginTop="8dp"
+        android:layout_marginHorizontal="12dp" >
+
+        <ImageView
+            android:id="@+id/ivHomeIcon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:padding="5dp"
+            android:background="@drawable/bg_home_team_logo"
+            tools:src="@drawable/ic_team_default" />
+
+        <ImageView
+            android:id="@+id/ivAwayIcon"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:padding="5dp"
+            android:background="@drawable/bg_home_team_logo"
+            android:layout_marginLeft="2dp"
+            tools:src="@drawable/ic_team_default" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_marginTop="@dimen/margin_10"
-            android:layout_marginHorizontal="@dimen/margin_12"
-            android:layout_marginBottom="@dimen/margin_6">
-            <ImageView
-                android:id="@+id/ivHomeIcon"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:padding="@dimen/margin_5"
-                android:background="@drawable/bg_home_team_logo"
-                android:src="@drawable/ic_team_default" />
-            <ImageView
-                android:id="@+id/ivAwayIcon"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:padding="@dimen/margin_5"
-                android:background="@drawable/bg_home_team_logo"
-                android:layout_marginLeft="-4dp"
-                android:src="@drawable/ic_team_default" />
-            <androidx.legacy.widget.Space
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"/>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center_vertical|right">
-                <TextView
-                    android:id="@+id/tvGamePlayTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:includeFontPadding="false"
-                    android:lines="1"
-                    android:text="---"
-                    android:textColor="@color/color_025BE8"
-                    android:textSize="@dimen/textSize16sp"
-                    android:textStyle="bold"/>
-                <TextView
-                    android:id="@+id/tvGameStatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_1"
-                    android:lines="1"
-                    android:text="---"
-                    android:textColor="@color/color_6D7693"
-                    android:textSize="@dimen/textSize12sp" />
+            android:orientation="vertical"
+            android:gravity="center_vertical|right" >
 
-
-            </LinearLayout>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:layout_marginBottom="@dimen/margin_6"
-            android:layout_marginHorizontal="@dimen/margin_12">
             <TextView
-                android:id="@+id/tvGameType"
+                android:id="@+id/tvGamePlayTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:includeFontPadding="false"
                 android:lines="1"
-                tools:text="Football"
-                android:textColor="@color/color_6D7693"
-                android:textSize="@dimen/textSize14sp"
-                android:textStyle="bold"/>
-            <View
-                android:layout_width="@dimen/margin_0.5"
-                android:layout_height="@dimen/margin_12"
-                android:background="@color/color_E0E3EE"
-                android:layout_marginHorizontal="@dimen/margin_4"/>
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                tools:text="---"/>
+
             <TextView
-                android:id="@+id/tvLeagueName"
-                android:layout_width="match_parent"
+                android:id="@+id/tvGameStatus"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                tools:text="Siêu giải Trung Quốc"
-                android:textColor="@color/color_6D7693"
-                android:textSize="@dimen/textSize14sp" />
+                android:layout_marginTop="1dp"
+                android:lines="1"
+                android:text="---"
+                android:textColor="@color/transparent_white_80"
+                android:textSize="12sp" />
+
         </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:layout_marginBottom="@dimen/margin_6"
+        android:layout_marginHorizontal="@dimen/margin_12">
+
+        <TextView
+            android:id="@+id/tvGameType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:lines="1"
+            tools:text="Football"
+            android:textColor="@color/white"
+            android:textSize="@dimen/textSize14sp"
+            android:textStyle="bold"/>
+
         <View
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/margin_0.5"
-            android:background="@color/color_E0E3EE"
-            android:layout_marginHorizontal="@dimen/margin_12"/>
+            android:layout_width="1dp"
+            android:layout_height="12dp"
+            android:background="@color/transparent_white_30"
+            android:layout_marginHorizontal="8dp"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="@dimen/margin_12"
-            android:layout_marginTop="@dimen/margin_6">
-
-
-            <TextView
-                android:id="@+id/tv_home_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:layout_marginRight="@dimen/margin_16"
-                android:lines="1"
-                android:textColor="@color/color_313F56"
-                android:textStyle="bold"
-                android:textSize="@dimen/textSize14sp"
-                tools:text="Chelsea"/>
-
-            <TextView
-                android:id="@+id/tv_home_score"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:includeFontPadding="false"
-                android:layout_gravity="center_vertical"
-                android:fontFamily="@font/inter_bold"
-                android:textColor="@color/color_313F56"
-                android:textSize="@dimen/textSize16sp"
-                tools:text="1" />
-        </LinearLayout>
-        <LinearLayout
+        <TextView
+            android:id="@+id/tvLeagueName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginHorizontal="@dimen/margin_12"
-            android:layout_marginVertical="@dimen/margin_6">
+            android:ellipsize="end"
+            android:maxLines="1"
+            tools:text="Siêu giải Trung Quốc"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
+    </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="@dimen/margin_12"
+        android:layout_marginTop="@dimen/margin_6">
 
-            <TextView
-                android:id="@+id/tv_away_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:lines="1"
-                android:layout_marginRight="@dimen/margin_16"
-                android:textColor="@color/color_313F56"
-                android:textStyle="bold"
-                android:textSize="@dimen/textSize14sp"
-                tools:text="Chelsea"/>
-
-            <TextView
-                android:id="@+id/tv_away_score"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:fontFamily="@font/inter_bold"
-                android:includeFontPadding="false"
-                android:textColor="@color/color_313F56"
-                android:textSize="@dimen/textSize16sp"
-                tools:text="1"/>
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/tv_home_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/margin_12"
-            android:layout_marginBottom="10dp">
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:layout_marginRight="@dimen/margin_16"
+            android:lines="1"
+            android:textColor="@color/color_313F56"
+            android:textStyle="bold"
+            android:textSize="@dimen/textSize14sp"
+            tools:text="Chelsea"/>
 
-            <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
-                android:id="@+id/oddBtn1"
-                android:layout_width="0dp"
-                android:layout_height="36dp"
-                android:layout_weight="1" />
+        <TextView
+            android:id="@+id/tv_home_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:includeFontPadding="false"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/inter_bold"
+            android:textColor="@color/color_313F56"
+            android:textSize="@dimen/textSize16sp"
+            tools:text="1" />
+    </LinearLayout>
 
-            <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
-                android:id="@+id/oddBtn2"
-                android:layout_width="0dp"
-                android:layout_marginLeft="8dp"
-                android:layout_height="36dp"
-                android:layout_weight="1" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginHorizontal="@dimen/margin_12"
+        android:layout_marginBottom="@dimen/margin_6">
 
-            <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
-                android:id="@+id/oddBtn3"
-                android:layout_width="0dp"
-                android:layout_height="36dp"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1" />
-        </LinearLayout>
+        <TextView
+            android:id="@+id/tv_away_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:lines="1"
+            android:layout_marginRight="@dimen/margin_16"
+            android:textColor="@color/color_313F56"
+            android:textStyle="bold"
+            android:textSize="@dimen/textSize14sp"
+            tools:text="Chelsea"/>
+
+        <TextView
+            android:id="@+id/tv_away_score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="@font/inter_bold"
+            android:includeFontPadding="false"
+            android:textColor="@color/color_313F56"
+            android:textSize="@dimen/textSize16sp"
+            tools:text="1"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/margin_12"
+        android:layout_marginTop="6dp">
+
+        <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
+            android:id="@+id/oddBtn1"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_weight="1" />
+
+        <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
+            android:id="@+id/oddBtn2"
+            android:layout_width="0dp"
+            android:layout_marginLeft="8dp"
+            android:layout_height="36dp"
+            android:layout_weight="1" />
+
+        <org.cxct.sportlottery.ui.sport.oddsbtn.OddsHomeHotButton
+            android:id="@+id/oddBtn3"
+            android:layout_width="0dp"
+            android:layout_height="36dp"
+            android:layout_marginLeft="8dp"
+            android:layout_weight="1" />
+    </LinearLayout>
 </LinearLayout>
-</FrameLayout>
