--- a/app/src/main/res/layout/view_first_deposit.xml
+++ b/app/src/main/res/layout/view_first_deposit.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@color/color_FFFFFF">
     
@@ -27,116 +28,15 @@
             android:textSize="@dimen/textSize14sp"
             android:text="@string/P276"/>
     </LinearLayout>
-    <LinearLayout
-        android:id="@+id/linChooseReward"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFirstDeposit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingLeft="@dimen/margin_12"
-        android:paddingRight="@dimen/margin_6"
         android:layout_marginBottom="@dimen/margin_12"
-        android:gravity="center">
-        <ImageView
-            android:id="@+id/ivRewardCheck"
-            android:layout_width="@dimen/margin_24"
-            android:layout_height="@dimen/margin_24"
-            android:src="@drawable/selector_radio_circle"/>
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/margin_6"
-            android:layout_marginLeft="@dimen/margin_6"
-            android:background="@drawable/selector_blue_radius_12">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/bg_kapian">
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="92"
-                android:orientation="vertical"
-                android:gravity="center">
-               <TextView
-                   android:id="@+id/tvPercent"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:includeFontPadding="false"
-                   android:textSize="36sp"
-                   android:textColor="@color/color_025BE8"
-                   android:textStyle="bold"
-                   tools:text="10%"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14sp"
-                    android:textColor="@color/color_025BE8"
-                    android:text="@string/P277"/>
-            </LinearLayout>
-            <ImageView
-                android:layout_width="@dimen/margin_1"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:src="@drawable/bg_line_dash_greenlight"
-                android:adjustViewBounds="true"/>
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="238"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:paddingHorizontal="@dimen/margin_10">
-               <LinearLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:gravity="center_vertical">
-                   <TextView
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:textColor="#303C55"
-                       android:textSize="@dimen/textSize14sp"
-                       android:text="@string/P278"/>
-                   <TextView
-                       android:id="@+id/tvCapped"
-                       android:layout_width="0dp"
-                       android:layout_height="wrap_content"
-                       android:layout_weight="1"
-                       android:singleLine="true"
-                       android:layout_marginHorizontal="@dimen/margin_5"
-                       android:textColor="@color/color_F23C3B"
-                       android:textSize="@dimen/textSize18sp"
-                       android:textStyle="bold"
-                       tools:text="₱ 1,000"/>
-                   <TextView
-                       android:id="@+id/tvRewardTC"
-                       android:layout_width="wrap_content"
-                       android:layout_height="@dimen/margin_20"
-                       android:gravity="center"
-                       android:paddingHorizontal="@dimen/margin_5"
-                       android:background="@drawable/bg_red_radius_22"
-                       android:textColor="@color/color_FFFFFF"
-                       android:textSize="@dimen/textSize12sp"
-                       android:text="@string/terms_conditions_short"/>
-
-               </LinearLayout>
-                <TextView
-                    android:id="@+id/tvRewardDesp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_6D7693"
-                    android:textSize="@dimen/textSize12sp"
-                    android:maxLines="2"
-                    android:ellipsize="end"
-                    android:text="@string/P281"/>
-            </LinearLayout>
-
-        </LinearLayout>
-        </FrameLayout>
-    </LinearLayout>
-
-
-
-
+        android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="2"
+        tools:listitem="@layout/item_dailyconfig"/>
 
 </LinearLayout>
 
