解决合并报错

--- a/app/src/main/res/layout/dialog_pop_image.xml
+++ b/app/src/main/res/layout/dialog_pop_image.xml
@@ -43,8 +43,7 @@
         app:cardCornerRadius="@dimen/margin_16">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="32dp">
+        android:layout_height="wrap_content">
 
         <com.stx.xhb.androidx.XBanner
             android:id="@+id/xbanner"
