--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -30,7 +30,8 @@
                 <ImageView
                     android:id="@+id/ivCover"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="212dp"
+                    android:scaleType="centerCrop"/>
             <TextView
                 android:id="@+id/tvTitle"
                 android:layout_width="match_parent"
