投注结果页面，spread显示优化

--- a/app/src/main/res/layout/item_match_receipt.xml
+++ b/app/src/main/res/layout/item_match_receipt.xml
@@ -10,7 +10,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/margin_10">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline"
@@ -90,7 +91,6 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:textSize="@dimen/textSize14sp"
-                android:textStyle="bold"
                 android:textColor="@color/color_0D2245"/>
 
 
