--- a/app/src/main/res/layout/activity_info_center.xml
+++ b/app/src/main/res/layout/activity_info_center.xml
@@ -5,9 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_141414_F3F4F5"
-    tools:context=".ui2.infoCenter.InfoCenterActivity">
+    tools:context=".ui.infoCenter.InfoCenterActivity">
 
-    <include layout="@layout/view_base_tool_bar_no_drawer" />
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/view_base_tool_bar_no_drawer" />
 
     <org.cxct.sportlottery.view.CustomTabLayout
         android:id="@+id/custom_tab_layout"
@@ -15,7 +17,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"/>
+        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
 
     <com.scwang.smart.refresh.layout.SmartRefreshLayout
         android:layout_width="match_parent"
