--- a/app/src/main/res/layout/activity_edit_username.xml
+++ b/app/src/main/res/layout/activity_edit_username.xml
@@ -5,9 +5,10 @@
     android:orientation="vertical"
     android:background="@color/color_F0F5FA">
 
-    <include
-        android:id="@+id/tool_bar"
-        layout="@layout/view_base_tool_bar_no_drawer" />
+    <org.cxct.sportlottery.view.CustomTopToolbar
+        android:id="@+id/toolBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
     <ScrollView
         android:layout_width="match_parent"
