--- a/app/src/main/res/layout/dialog_scan_camera_photo.xml
+++ b/app/src/main/res/layout/dialog_scan_camera_photo.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center">
+<androidx.appcompat.widget.LinearLayoutCompat
     android:layout_width="245dp"
     android:layout_height="115dp"
     android:layout_margin="5dp"
@@ -29,3 +34,4 @@
         android:textColor="@color/color_FFFFFF" />
 
 </androidx.appcompat.widget.LinearLayoutCompat>
+</LinearLayout>
