增加新闻分类

--- a/app/src/main/res/layout/include_home_news.xml
+++ b/app/src/main/res/layout/include_home_news.xml
@@ -50,15 +50,15 @@
             app:tabSelectedTextColor="@color/color_025BE8"
             app:tabTextColor="@color/color_303C55">
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/app_name" />
+<!--            <com.google.android.material.tabs.TabItem-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/app_name" />-->
 
-            <com.google.android.material.tabs.TabItem
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/B001" />
+<!--            <com.google.android.material.tabs.TabItem-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:text="@string/B001" />-->
 
         </com.google.android.material.tabs.TabLayout>
 
