--- a/app/src/main/res/drawable/selector_tab_home_news.xml
+++ b/app/src/main/res/drawable/selector_tab_home_news.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:state_checked="true">
-    <shape >
-        <corners android:radius="14dp"/>
-        <solid android:color="@color/color_1A025BE8"/>
-    </shape>
-</item>
-    <item android:state_checked="false">
-    <shape >
-        <corners android:radius="14dp" />
-        <solid android:color="@color/color_FFFFFF" />
-    </shape>
-</item>
+    <item android:state_selected="true">
+        <shape>
+            <corners android:radius="14dp" />
+            <solid android:color="@color/color_1A025BE8" />
+        </shape>
+    </item>
+    <item android:state_selected="false">
+        <shape>
+            <corners android:radius="14dp" />
+            <solid android:color="@color/color_FFFFFF" />
+        </shape>
+    </item>
 </selector>
