新闻分类样式调整

--- a/app/src/main/res/layout/include_home_news.xml
+++ b/app/src/main/res/layout/include_home_news.xml
@@ -47,6 +47,7 @@
             app:tabPaddingEnd="10dp"
             app:tabPaddingStart="10dp"
             app:tabRippleColor="@null"
+            android:minWidth="@dimen/margin_10"
             app:tabSelectedTextColor="@color/color_025BE8"
             app:tabTextColor="@color/color_303C55">
 
